Bug 15796 - Spotlight search results don't show file size and creation date
Summary: Spotlight search results don't show file size and creation date
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-03 16:22 UTC by Ralph Böhme
Modified: 2025-03-25 14:44 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.20, 4.21 and 4.22 cherry-picked from master (2.70 KB, patch)
2025-02-17 07:57 UTC, Ralph Böhme
slow: review? (metze)
janger: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2025-02-03 16:22:23 UTC
Have patch, need bugnumber.
Comment 1 Samba QA Contact 2025-02-14 11:57:14 UTC
This bug was referenced in samba master:

0ba1a8d77694182058d1c01b54a8759bdf0e28a6
Comment 2 Ralph Böhme 2025-02-17 07:57:52 UTC
Created attachment 18568 [details]
Patch for 4.20, 4.21 and 4.22 cherry-picked from master
Comment 3 Jule Anger 2025-02-17 10:01:41 UTC
Pushed to autobuild-v4-{22,21,20}-test.
Comment 4 Samba QA Contact 2025-02-17 11:05:40 UTC
This bug was referenced in samba v4-21-test:

1fe10a03c5d467ba7bc14a92c77f114498efcc61
Comment 5 Samba QA Contact 2025-02-17 15:53:04 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.4):

1fe10a03c5d467ba7bc14a92c77f114498efcc61
Comment 6 Samba QA Contact 2025-02-17 17:22:23 UTC
This bug was referenced in samba v4-22-test:

65494ee1223072df2475f3970a15251e5dd6935b
Comment 7 Samba QA Contact 2025-02-17 17:29:39 UTC
This bug was referenced in samba v4-20-test:

b4c8927881a08349f05e061c9918e4e6b76e4b16
Comment 8 Jule Anger 2025-02-17 17:57:25 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2025-02-20 13:03:18 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.0rc3):

65494ee1223072df2475f3970a15251e5dd6935b
Comment 10 Samba QA Contact 2025-03-25 14:44:14 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.8):

b4c8927881a08349f05e061c9918e4e6b76e4b16